--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,46 @@
 *.exe
 *.out
 *.app
+
+# Ignore thumbnails created by windows
+Thumbs.db
+
+# Ignore files build by Visual Studio
+*.obj
+*.pdb
+*.aps
+*.user
+# *.vcproj
+# *.vcxproj*
+# *.sln
+*.vspscc
+*_i.c
+*.i
+*.icf
+*_p.c
+*.ncb
+*.suo
+*.tlb
+*.tlh
+*.bak
+*.cache
+*.ilk
+*.log
+.vs
+
+[Bb]in
+[Dd]ebug/
+[Dd]ebug.win32/
+[Dd]ebug.DLL/
+*.sbr
+*.sdf
+obj/
+[R]elease/
+[Rr]elease.win32/
+_ReSharper*/
+[Tt]est[Rr]esult*
+ipch/
+*.opensdf
+*.db
+*.opendb
+packages/
